--- a/style.css
+++ b/style.css
@@ -993,10 +993,19 @@ width: auto;
 }
 .card img{
     width: 100%;
-    height: 100%;
+    /* height: 100%;  // Bunu kaldırabilirsiniz */
 }
 .card-p{
     padding: 10px 0;
+}
+.card-h img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    max-height: 350px; /* ihtiyaca göre ayarlayabilirsiniz */
+    object-fit: contain;
+    display: block;
+    margin: 0 auto;
 }
 .card-h{
     padding: 10px;
