--- a/style.css
+++ b/style.css
@@ -998,25 +998,32 @@ width: auto;
 .card-p{
     padding: 10px 0;
 }
+
 .card-h img {
     width: 100%;
     height: auto;
     max-width: 100%;
-    max-height: 350px; /* ihtiyaca göre ayarlayabilirsiniz */
+    max-height: 350px;
     object-fit: contain;
     display: block;
     margin: 0 auto;
 }
-.card-h{
+
+.card-h {
     padding: 10px;
-    height: 300px;
     background: #5a518657;
     transition: .3s ease all;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
+
 .card-h:hover{
     background: #5a51868e;
 }
+
 
 @import "https://fonts.googleapis.com/css?family=Dosis:300,400,500,600,700";
 #timeline .timeline-item:after, header:after, #timeline .timeline-item:before, header:before {
@@ -1233,12 +1240,3 @@ h1, h2, h3, h4 {
       left: 0;
     }
   }
-
-
-  .swiper-slide img{
-    position: fixed !important;
-    top: 0 !important;
-    width: 100% !important;
-    height: 100% !important;
-
-}
